[package]
name = "circuitree-experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
circuitree = { git = "https://gitlab.com/etrovub/smartnets/glycos/circuitree.git" }
ark-ff = "0.5.0"
ark-std = "0.5.0"
ark-bls12-377 = "0.5.0"
ark-groth16 = "0.5.0"
ark-relations = "0.5.0"
ark-snark = "0.5.0"
datalog = { git = "https://gitlab.com/etrovub/smartnets/glycos/circuitree.git" }
